--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-.App {
-  padding: 30px;
-  display: flex;
-}
+/*.App {*/
+/*  padding: 30px;*/
+/*  display: flex;*/
+/*}*/
 
-.App > div {
-  margin-right: 50px;
-}
+/*.App > div {*/
+/*  margin-right: 50px;*/
+/*}*/
 
 .isDone {
   text-decoration: line-through;
@@ -16,22 +16,22 @@
   font-weight: bold;
   color: hotpink;
 }
-.btn {
-  background-color: darkcyan;
-  padding: 3px;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 3px;
-  border: none;
-  margin-right: 3px;
-}
-.active-btn {
-  background-color: maroon;
-  color: white;
-}
+/*.btn {*/
+/*  background-color: darkcyan;*/
+/*  padding: 3px;*/
+/*  color: white;*/
+/*  font-weight: bold;*/
+/*  cursor: pointer;*/
+/*  border-radius: 3px;*/
+/*  border: none;*/
+/*  margin-right: 3px;*/
+/*}*/
+/*.active-btn {*/
+/*  background-color: maroon;*/
+/*  color: white;*/
+/*}*/
 
-.error {
-  border: 2px solid hotpink;
-  outline: none;
-}
+/*.error {*/
+/*  border: 2px solid hotpink;*/
+/*  outline: none;*/
+/*}*/
